# intent-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  intent-driven.md  mkdocs.yml  pyproject.toml
.claude/skills/intent-capture/: SKILL.md
.claude/skills/intent-clarify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
doc/design/: intent-driven-design-generic.md  voice-agent-architecture.md
docs/: changelog.md  downstream-integrations.md  index.md  installation.md  methodology.md  quickstart.md  speckit-integration.md  templates.md
examples/: README.md
examples/developer-platform/: transcript.md
examples/portfolio-system/: transcript.md
memory/: constitution.md
scripts/: check.ps1  check.sh  init.ps1  init.sh
specs/001-intent-init/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-intent-check/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-decompose-speckit-output/: spec.md
src/intent_cli/: __init__.py  adapters.py  agents.py  capture.py  checks.py  templates.py
templates/: architecture-template.md  business-design-template.md  intent-template.md
templates/adr/: _template.md
templates/commands/: capture.md  clarify.md  decompose.md  define.md  steer.md
tests/: test_capture.py  test_check.py  test_init.py
(+15 files in other folders)
