[project]
name = "intent-cli"
version = "0.0.1"
description = "Intent CLI, part of Intent Kit. A tool to bootstrap projects for Intent-Driven Design (IDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "platformdirs",
    "readchar",
]

[project.scripts]
intent = "intent_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intent_cli"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "intent_cli/data/templates"
