[project]
name = "intent-cli"
version = "0.0.1"
description = "Intent CLI, part of Intent Kit. A tool to bootstrap projects for Intent-Driven Design (IDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "platformdirs",
    "readchar",
]

[project.scripts]
intent = "intent_cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/intent_cli"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "intent_cli/data/templates"
